# FaceDetection

./: README.md
FaceDetectionConsole/: CMakeLists.txt
FaceDetectionConsole/include/: tevian_console.h  teviandll.h
FaceDetectionConsole/src/: json_parser.cpp  main.cpp  tevian_console.cpp  tevian_dll.cpp
FaceDetectionGUI/: CMakeLists.txt
FaceDetectionGUI/form/: auth_window.ui  mainwindow.ui
FaceDetectionGUI/include/: auth_window.h  face_info.h  json_parser.h  mainwindow.h  teviandll.h  zoom_view.h
FaceDetectionGUI/src/: auth_window.cpp  main.cpp  mainwindow.cpp  zoom_view.cpp
TevianDLL/: CMakeLists.txt
TevianDLL/include/: tevian_dll.h  tevian_dll_global.h
